table display to inline-block, working on mobile width fix.

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
 table {
   width:100%;
   padding:1%;
+  display:inline-block;
 }
 
 td {
